<resources>
    <string name="app_name">AndroidStudy</string>
    <string name="main_title">오늘 하루는 어땠나요?</string>
    <string name="main_subtitle">감정 우표를 선택해주세요</string>
    <string name="main_title_info">선택한 감정우표를 기반으로 맞춤형 질문이 배달됩니다</string>
    <string name="main_happy">더없이 행복한 하루였어요</string>
    <string name="main_excited">들뜨고 흥분돼요</string>
    <string name="main_soso">평범한 하루였어요</string>
    <string name="main_nervous">생각이 많아지고 불편해요</string>
    <string name="main_angry">부글부글 화가 나요</string>
</resources>


