<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_left"
        android:id="@+id/main_backArrow"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_title"
        android:text="@string/main_title"
        android:textSize="20sp"

        app:layout_constraintTop_toBottomOf="@id/main_backArrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_subtitle"
        android:text="@string/main_subtitle"

        app:layout_constraintTop_toBottomOf="@id/main_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_title_info"
        android:text="@string/main_title_info"
        android:textSize="10sp"

        app:layout_constraintTop_toBottomOf="@id/main_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="30dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_face_happy_iv"
        android:src="@drawable/face_happy"

        app:layout_constraintTop_toBottomOf="@id/main_title_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_face_happy_tv"
        android:text="@string/main_happy"
        android:textSize="10sp"

        app:layout_constraintTop_toBottomOf="@id/main_face_happy_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_face_excited_iv"
        android:src="@drawable/face_excited"

        app:layout_constraintTop_toBottomOf="@id/main_face_happy_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_face_excited_tv"
        android:text="@string/main_excited"
        android:textSize="10sp"

        app:layout_constraintTop_toBottomOf="@id/main_face_excited_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_face_soso_iv"
        android:src="@drawable/face_soso"

        app:layout_constraintTop_toBottomOf="@id/main_face_excited_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_face_soso_tv"
        android:text="@string/main_soso"
        android:textSize="10sp"

        app:layout_constraintTop_toBottomOf="@id/main_face_soso_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_face_nervous_iv"
        android:src="@drawable/face_nervous"

        app:layout_constraintTop_toBottomOf="@id/main_face_soso_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_face_nervous_tv"
        android:text="@string/main_nervous"
        android:textSize="10sp"

        app:layout_constraintTop_toBottomOf="@id/main_face_nervous_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_face_angry_iv"
        android:src="@drawable/face_angry"

        app:layout_constraintTop_toBottomOf="@id/main_face_nervous_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_face_angry_tv"
        android:text="@string/main_angry"
        android:textSize="10sp"

        app:layout_constraintTop_toBottomOf="@id/main_face_angry_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>